--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node app.js",
     "dev": "nodemon app.js",
-    "lint": "npx eslint . "
+    "lint": "npx eslint . --fix"
   },
   "author": "Nikita Khomenko",
   "license": "ISC",
@@ -17,8 +17,12 @@
     "nodemon": "^2.0.22"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
+    "celebrate": "^15.0.1",
     "express": "^4.18.2",
-    "mongoose": "^7.3.0"
+    "jsonwebtoken": "^9.0.0",
+    "mongoose": "^7.3.0",
+    "validator": "^13.9.0"
   }
 }
